# SRAM_nosie_simulation-GPU-experiment

./: .gitignore  AMD_ROCm_HIP_Implementation_Plan.md  Dockerfile.portability  README.md  README_ADVANCED.md  SRAM_GPU_Portability_PRD.md  USAGE_UNIFIED.md  adaptive_perceptron_sram.py  analytical_ground_truth.py  ci_regression_check.py  examples.py  execution_policy.py  gpu_analytical_adapter.py  hybrid_perceptron_sram.py  lifetime_service.py  main.py  main_advanced.py  ml_benchmark.py  native_backend.py  native_hybrid_fidelity_check.py  perceptron_calibration.py  perceptron_logic_gates.py  pyproject.toml  pyside_sram_app_advanced.py  reliability_model.py  requirements-benchmark.txt  requirements-dev.txt  requirements-ui.txt  requirements.txt  sample_config.json  sram_ai_advisor.py  streamlit_app.py  streamlit_app_advanced.py  streamlit_app_unified.py  streamlit_reliability_tab.py  workload_model.py
.omx/: metrics.json
backends/: __init__.py  accelerator_lane.py  base.py  cpu_existing.py  cpu_numpy.py  cuda_lane.py  registry.py  runtime_torch_kernels.py  torch_portable.py
benchmarks/: __init__.py  cases.py  cli.py  env.py  metrics.py  reports.py  run_suite.py  runner.py  schema.py  validate.py
configs/: ops_plan_v1.json
docker/: README.md
docs/: backend_portability.md  benchmark_baseline_inventory.md  benchmark_methodology.md  ci_future_rocm_runner_note.md  hip_porting_plan.md  hipify_preflight_inventory.md  instinct_target_profile.md  limitations_and_claims.md  ops_plan_v1_latest.md  (+13 more)
native/cpp_eda_bridge/: CMakeLists.txt
native/cpp_eda_bridge/include/: eda_bridge.hpp
native/cpp_eda_bridge/src/: eda_bridge.cpp
native/rust_core/: Cargo.toml
native/rust_core/src/: c_api.rs  lib.rs  optimizer.rs  reliability.rs  simulate.rs
(+412 files in other folders)
