[package]
name = "sram_native_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_sram_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
